feat: entity 경로 지정

--- a/ormconfig.json
+++ b/ormconfig.json
@@ -5,7 +5,10 @@
   "username": "junhee",
   "password": "password",
   "database": "test",
-  "entities": ["dist/**/*.entity.{ts, js}"],
+  "entities": [
+    "dist/entities/*.entity{ .ts,.js}", 
+    "dist/entities/**/*.entity{ .ts,.js}"
+  ],
   "logging": true,
   "synchronize": true
 }
