--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
   "dependencies": {
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
+    "@nestjs/jwt": "^7.2.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.1.5",
-    "@types/uuid": "^8.3.0",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.5",
     "joi": "^17.4.0",
     "mysql2": "^2.2.5",
     "reflect-metadata": "^0.1.13",
@@ -40,6 +41,7 @@
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
     "@types/bcryptjs": "^2.4.2",
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.3",
     "@types/jest": "26.0.10",
     "@types/joi": "^17.2.3",
@@ -47,6 +49,7 @@
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "3.9.1",
     "@typescript-eslint/parser": "3.9.1",
+    "@types/uuid": "^8.3.0",
     "eslint": "7.7.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.1",
