feat: user db 재설계

--- a/ormconfig.json
+++ b/ormconfig.json
@@ -6,8 +6,9 @@
   "password": "password",
   "database": "test",
   "entities": [
-    "dist/src/entities/*.entity{ .ts,.js}", 
-    "dist/src/entities/**/*.entity{ .ts,.js}"
+    "dist/src/entities/*.entity{.ts,.js}", 
+    "dist/src/entities/**/*.entity{.ts,.js}",
+    "dist/src/auth/**/entities/*.entity{.ts,.js}"
   ],
   "logging": true,
   "synchronize": true
