--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@nestjs/core": "^7.0.0",
     "@nestjs/jwt": "^7.2.0",
     "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/platform-socket.io": "^7.6.18",
     "@nestjs/typeorm": "^7.1.5",
+    "@nestjs/websockets": "^7.6.18",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.5",
     "joi": "^17.4.0",
@@ -46,10 +48,11 @@
     "@types/jest": "26.0.10",
     "@types/joi": "^17.2.3",
     "@types/node": "^13.9.1",
+    "@types/socket.io": "^3.0.2",
     "@types/supertest": "^2.0.8",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "3.9.1",
     "@typescript-eslint/parser": "3.9.1",
-    "@types/uuid": "^8.3.0",
     "eslint": "7.7.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.1",
