--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bklog-api",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "Junhee",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@nestjs/common": "^7.0.0",
+    "@nestjs/config": "^1.0.1",
     "@nestjs/core": "^7.0.0",
     "@nestjs/jwt": "^7.2.0",
     "@nestjs/platform-express": "^7.0.0",
