--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,10 @@
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
-    "incremental": true
+    "incremental": true,
+    "compilerOptions": {
+      "skipLibCheck": true
+    }
   },
   "exclude": ["node_modules"]
 }
