--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@nestjs/typeorm": "^7.1.5",
     "@nestjs/websockets": "^7.6.18",
     "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
     "cookie-parser": "^1.4.5",
     "joi": "^17.4.0",
     "mysql2": "^2.2.5",
