fix: 환경변수 변경

--- a/.production.env
+++ b/.production.env
@@ -3,4 +3,4 @@ DATABASE_USER=bklogapi
 DATABASE_PASSWORD=password
 DATABASE_PORT=3306
 ORIGIN=https://bklog-app-deploy.vercel.app;
-NODE_ENV=prod
+ENV=prod
