--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "cookie-parser": "^1.4.5",
+    "express-session": "^1.17.2",
     "joi": "^17.4.0",
     "mysql2": "^2.2.5",
     "reflect-metadata": "^0.1.13",
@@ -48,6 +49,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.3",
+    "@types/express-session": "^1.17.4",
     "@types/jest": "26.0.10",
     "@types/joi": "^17.2.3",
     "@types/node": "^13.9.1",
