#10 style: cookie 도메인 변경

--- a/.production.env
+++ b/.production.env
@@ -2,5 +2,5 @@ DATABASE=bklog
 DATABASE_USER=bklogapi
 DATABASE_PASSWORD=password
 DATABASE_PORT=3306
-ORIGIN=https://bklog-app-deploy.vercel.app;
+ORIGIN=https://bklog-app-deploy.vercel.app
 ENV=prod
