--- a/.development.env
+++ b/.development.env
@@ -1,7 +1,7 @@
-DATABASE=test
+DATABASE=bklog
 DATABASE_USER=junhee
 DATABASE_PASSWORD=password
-DATABASE_PORT=3307
+DATABASE_PORT=3306
 ORIGIN=*
 ENV=dev
 DOMAIN=localhost
