#8 [feat] passport 추가

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/config": "^1.0.1",
     "@nestjs/core": "^7.0.0",
     "@nestjs/jwt": "^7.2.0",
+    "@nestjs/passport": "^8.1.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/platform-socket.io": "^7.6.18",
     "@nestjs/typeorm": "^7.1.5",
@@ -36,6 +37,10 @@
     "express-session": "^1.17.2",
     "joi": "^17.4.0",
     "mysql2": "^2.2.5",
+    "nestjs-seeder": "^0.2.0",
+    "passport": "^0.5.2",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
@@ -52,7 +57,10 @@
     "@types/express-session": "^1.17.4",
     "@types/jest": "26.0.10",
     "@types/joi": "^17.2.3",
+    "@types/multer": "^1.4.7",
     "@types/node": "^13.9.1",
+    "@types/passport-jwt": "^3.0.6",
+    "@types/passport-local": "^1.0.34",
     "@types/socket.io": "^3.0.2",
     "@types/supertest": "^2.0.8",
     "@types/uuid": "^8.3.0",
