--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,9 +11,8 @@
     "outDir": "./dist",
     "baseUrl": "./",
     "incremental": true,
-    "compilerOptions": {
-      "skipLibCheck": true
-    }
+    "skipLibCheck": true,
+    "strict": true
   },
   "exclude": ["node_modules"]
 }
