--- a/.production.env
+++ b/.production.env
@@ -4,5 +4,5 @@ DATABASE_PASSWORD=password
 DATABASE_PORT=3306
 ORIGIN=https://bklog-app-deploy.vercel.app
 ENV=prod
-DOMAIN=bklogapi.com
-SERVER_ADDRESS=https://bklogapi.com
+DOMAIN=bklog-api.z01.azurefd.net
+SERVER_ADDRESS=https://bklog-api.z01.azurefd.net
