--- a/.production.env
+++ b/.production.env
@@ -2,7 +2,7 @@ DATABASE=bklog
 DATABASE_USER=bklogapi
 DATABASE_PASSWORD=password
 DATABASE_PORT=3306
-ORIGIN=https://bklog-app-deploy.vercel.app
+ORIGIN=*
 ENV=prod
 DOMAIN=bklog-api.z01.azurefd.net
 SERVER_ADDRESS=https://bklog-api.z01.azurefd.net
