#6 [fix] origin 변경  - origin client에 맞춰 변경

--- a/.production.env
+++ b/.production.env
@@ -2,7 +2,7 @@ DATABASE=bklog
 DATABASE_USER=bklogapi
 DATABASE_PASSWORD=password
 DATABASE_PORT=3306
-ORIGIN=*
+ORIGIN=https://bklog-app.vercel.app
 ENV=prod
 DOMAIN=bklog-api.z01.azurefd.net
 SERVER_ADDRESS=https://bklog-api.z01.azurefd.net
